FlightPath 6.x Changelog
========================


2021-06-16
  Adding in new setting to disable all student logins (unless whitelisted).  It's in the System Settings form.
  
  Added is_disabled and last_login to fields in the user object.

2021-06-15
  Added more literal strings to t() function so they can be translated.
  

2021-06-13
  Changed system.install so that institution_id is a 100 varchar in the database, instead of 10.  Also made `name` an index for transfer_institutions table.
  
  Removed some default character set and collation vals from .install scripts, as this can cause a problem in MySQL 8+.
  
  Removed apply_draft_changes logic from schools module, since no longer needed and causing error.  Cleaned up old code.  Made sure
  What If mode only showed correct degrees based on the students' school.
  
  Added logic in schools and admin.degrees.inc when copying a degree, make sure to keep up with school id.
  
  Fixed Duplicate entire catalog year function to also respect school_id.
  

2021-06-12
  Working on schools functionlity for groups & definitions.
  
  Fixed a bug where icon filename field was no longer visible when editing degrees.
  
  Tweaks to popup which displays the degrees using group.
  
  Added a confirm dialog when changing schools, since it could cause all sorts of problems.
  
  Watchdog insert was failing because anon user school_id was null; wasn't being intval'd.

  Fixing PHP warning in system_init().

2021-06-11
  Added _validate function when editing a degree, so we can test for school mis-match.  Also fixed a bug where if there was more than one
  form_error() for the same element, it wouldn't display the red border around that element.  Also made it so that markup fields
  can also have form_error called on them.


2021-06-10
  Added ability to have group requirements (in degrees) with fractional hours.  Ex: 0.5 hours or 1.2 hours, etc.  Previously,